include/codata_constants_2022.h

ADD_IMPORT extern const struct codata_constant_type CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT;
ADD_IMPORT extern const struct codata_constant_type CONVENTIONAL_VALUE_OF_OHM_90;
ADD_IMPORT extern const struct codata_constant_type CONVENTIONAL_VALUE_OF_VOLT_90;
ADD_IMPORT extern const struct codata_constant_type CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT;
ADD_IMPORT extern const struct codata_constant_type CONVENTIONAL_VALUE_OF_WATT_90;
ADD_IMPORT extern const struct codata_constant_type COPPER_X_UNIT;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_ELECTRON_MAG_MOM_RATIO;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_ELECTRON_MASS_RATIO;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_G_FACTOR;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MAG_MOM;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MAG_MOM_TO_BOHR_MAGNETON_RATIO;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MASS;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MASS_ENERGY_EQUIVALENT;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MASS_IN_U;